overlay fix board and spacing btn

--- a/css/pages/board/boardLayout.css
+++ b/css/pages/board/boardLayout.css
@@ -18,6 +18,7 @@
   display: flex;
   gap: 20px;
   align-items: center;
+  justify-content: space-between;
 }
 .searchContainer {
   display: flex;
@@ -253,7 +254,7 @@
 }
 
 @media (max-width: 1390px) {
-  .boardColumn{
+  .boardColumn {
     min-width: 0;
   }
 
@@ -267,26 +268,24 @@
   }
 }
 
-
 @media (max-width: 1200px) {
-
-  .mainContainer{
+  .mainContainer {
     width: 100%;
   }
- .mainContent {
-  padding: 16px;
-  overflow-y: hidden;
-  height: auto;
-  margin-bottom: 100px;
-}
-.searchContainer{
-  width: 100%;
-  justify-content: center;
-}
+  .mainContent {
+    padding: 16px;
+    overflow-y: hidden;
+    height: auto;
+    margin-bottom: 100px;
+  }
+  .searchContainer {
+    width: 100%;
+    justify-content: center;
+  }
 
-.searchInput{
-  width: 100%;
-}
+  .searchInput {
+    width: 100%;
+  }
 
   .boardTitle {
     font-size: 56px;
@@ -307,12 +306,12 @@
     cursor: pointer;
   }
 
-.boardContainer {
-  flex-direction: column;
-  gap: 32px;
-  padding: 0;
-  height: auto;
-}
+  .boardContainer {
+    flex-direction: column;
+    gap: 32px;
+    padding: 0;
+    height: auto;
+  }
 
   .boardColumn {
     width: 100%;
@@ -335,27 +334,27 @@
     padding: 16px;
   }
 
-  .taskFooter{
+  .taskFooter {
     margin-top: auto;
   }
   #boardScrollContainer {
-  display: flex;
-  gap: 16px; 
-  overflow-x: auto;
-  padding: 16px;
-}
+    display: flex;
+    gap: 16px;
+    overflow-x: auto;
+    padding: 16px;
+  }
 
-.emptyState{
-  width: 100%;
-  height: 48px;
-  padding: 12px;
-}
+  .emptyState {
+    width: 100%;
+    height: 48px;
+    padding: 12px;
+  }
 
-.taskSection {
-  flex-shrink: 0;
-  scroll-snap-align: start;
-}
-.columnContent {
+  .taskSection {
+    flex-shrink: 0;
+    scroll-snap-align: start;
+  }
+  .columnContent {
     display: flex;
     overflow-x: auto;
     overflow-y: visible;
@@ -371,29 +370,28 @@
   }
 
   input::placeholder {
-  font-size: 16px;
-}
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 428px) {
-
-  .mainContainer{
+  .mainContainer {
     width: 100%;
   }
- .mainContent {
-  padding: 16px;
-  overflow-y: auto;
-  height: auto;
-  margin-bottom: 100px;
-}
-.searchContainer{
-  width: 100%;
-  justify-content: center;
-}
+  .mainContent {
+    padding: 16px;
+    overflow-y: auto;
+    height: auto;
+    margin-bottom: 100px;
+  }
+  .searchContainer {
+    width: 100%;
+    justify-content: center;
+  }
 
-.searchInput{
-  width: 100%;
-}
+  .searchInput {
+    width: 100%;
+  }
 
   .boardTitle {
     font-size: 56px;
@@ -414,12 +412,12 @@
     cursor: pointer;
   }
 
-.boardContainer {
-  flex-direction: column;
-  gap: 32px;
-  padding: 0;
-  height: auto;
-}
+  .boardContainer {
+    flex-direction: column;
+    gap: 32px;
+    padding: 0;
+    height: auto;
+  }
 
   .boardColumn {
     width: 100%;
@@ -442,27 +440,27 @@
     padding: 16px;
   }
 
-  .taskFooter{
+  .taskFooter {
     margin-top: auto;
   }
   #boardScrollContainer {
-  display: flex;
-  gap: 16px; 
-  overflow-x: auto;
-  padding: 16px;
-}
+    display: flex;
+    gap: 16px;
+    overflow-x: auto;
+    padding: 16px;
+  }
 
-.emptyState{
-  width: 100%;
-  height: 48px;
-  padding: 12px;
-}
+  .emptyState {
+    width: 100%;
+    height: 48px;
+    padding: 12px;
+  }
 
-.taskSection {
-  flex-shrink: 0;
-  scroll-snap-align: start;
-}
-.columnContent {
+  .taskSection {
+    flex-shrink: 0;
+    scroll-snap-align: start;
+  }
+  .columnContent {
     display: flex;
     overflow-x: auto;
     overflow-y: visible;
@@ -478,6 +476,6 @@
   }
 
   input::placeholder {
-  font-size: 16px;
-}
+    font-size: 16px;
+  }
 }
